--- a/frontend/src/components/ToDoBox/ToDoBox.module.scss
+++ b/frontend/src/components/ToDoBox/ToDoBox.module.scss
@@ -1,6 +1,11 @@
 .toDoBox_container {
     width: 40%;
     height: 500px;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2%;
+    gap: 1.5em;
 }
