--- a/frontend/src/components/BoxItem/BoxItem.module.scss
+++ b/frontend/src/components/BoxItem/BoxItem.module.scss
@@ -11,5 +11,10 @@
 }
 
 .boxItem_container:hover{
-    background-color: aquamarine;
+    background-color: lightgray;
+}
+
+.active{
+    background-color: gray;
+    text-decoration: line-through;
 }
