--- a/frontend/src/components/Nav/Nav.module.scss
+++ b/frontend/src/components/Nav/Nav.module.scss
@@ -1,7 +1,7 @@
 .nav_container {
     width: 100%;
     height: 50px;
-    background-color: lightcyan;
+    background-color: gray;
     display: flex;
     justify-content: center;
     align-items: center;
