--- a/frontend/src/components/BoxItem/BoxItem.module.scss
+++ b/frontend/src/components/BoxItem/BoxItem.module.scss
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    position: relative;
 }
 
 .boxItem_container:hover{
@@ -17,4 +18,17 @@
 .active{
     background-color: gray;
     text-decoration: line-through;
+}
+
+.deleteBtn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 16px;
+    height: 16px;
+    font-size: 16px;
+    background-color: transparent;
+    color: darkred;
+    font-weight: 700;
+    border: none;
 }
